--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "trying to make a whiteboard",
   "dependencies": {
     "express": "4.x",
-    "socket.io": "1.x",
-    "jquery": "2.x"
+    "socket.io": "1.x"
   },
   "engines": {
     "node": "0.10.x"
